--- a/Monaco/Monaco.html
+++ b/Monaco/Monaco.html
@@ -73,7 +73,7 @@
 
        
         const editor = monaco.editor.create(document.getElementById('editor-container'), {
-            value: "-- Start typing your Luau code here...\n",
+            value: "-- Mezo Executor\n",
             language: 'luau',
             theme: 'vs-dark',
             fontSize: 14,
