--- a/Monaco/Monaco.html
+++ b/Monaco/Monaco.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DTBS Monaco</title>
+    <title>Monaco Editor V2</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.1/min/vs/loader.min.js"></script>
     <style>
         body {
@@ -855,7 +855,7 @@
         setInterval(saveTabs, 30000);
         Refresh = function () {
             var text = GetText();
-            SetText("");
+            SetText("-- Mezo Executor");
             editor.trigger('keyboard', 'type', {
                 text: text
             });
