--- a/Monaco/Monaco.html
+++ b/Monaco/Monaco.html
@@ -855,7 +855,7 @@
         setInterval(saveTabs, 30000);
         Refresh = function () {
             var text = GetText();
-            SetText("-- Mezo Executor ");
+            SetText("--&nbsp;Mezo&nbsp;Executor ");
             editor.trigger('keyboard', 'type', {
                 text: text
             });
